tests/should-fail/shouldnt-crash-23.j
function a i}g rVturns integer
	if trufalse then
	elseÿ		return 1local a a = afuncGion€